content/_generated-doc/3.33/config/quarkus-cache.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-cache_quarkus-cache-type]] [.property-path]##link:#quarkus-cache_quarkus-cache-type[`+++quarkus.cache.type+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.cache.type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Default cache type (backend provider). If no explicit type is defined for a cache, this type will be used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_TYPE+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++caffeine+++`

a| [[quarkus-cache_quarkus-cache-enabled]] [.property-path]##link:#quarkus-cache_quarkus-cache-enabled[`+++quarkus.cache.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.cache.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether or not the cache extension is enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

h|[[quarkus-cache_section_quarkus-cache]] [.section-name.section-level0]##link:#quarkus-cache_section_quarkus-cache[Configuration that allows customizing cache names to use a different type]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-cache_quarkus-cache-cache-name-type]] [.property-path]##link:#quarkus-cache_quarkus-cache-cache-name-type[`+++quarkus.cache."cache-name".type+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.cache."cache-name".type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Cache type to be used for the cache name.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE__CACHE_NAME__TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE__CACHE_NAME__TYPE+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++caffeine+++`


h|[[quarkus-cache_section_quarkus-cache-caffeine]] [.section-name.section-level0]##link:#quarkus-cache_section_quarkus-cache-caffeine[Default configuration applied to all Caffeine caches (lowest precedence)]##
h|Type
h|Default

a| [[quarkus-cache_quarkus-cache-caffeine-initial-capacity]] [.property-path]##link:#quarkus-cache_quarkus-cache-caffeine-initial-capacity[`+++quarkus.cache.caffeine.initial-capacity+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.cache.caffeine.initial-capacity+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Minimum total size for the internal data structures. Providing a large enough estimate at construction time avoids the need for expensive resizing operations later, but setting this value unnecessarily high wastes memory.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE_INITIAL_CAPACITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE_INITIAL_CAPACITY+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-cache_quarkus-cache-caffeine-maximum-size]] [.property-path]##link:#quarkus-cache_quarkus-cache-caffeine-maximum-size[`+++quarkus.cache.caffeine.maximum-size+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.cache.caffeine.maximum-size+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Maximum number of entries the cache may contain. Note that the cache *may evict an entry before this limit is exceeded or temporarily exceed the threshold while evicting*. As the cache size grows close to the maximum, the cache evicts entries that are less likely to be used again. For example, the cache may evict an entry because it hasn't been used recently or very often.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE_MAXIMUM_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE_MAXIMUM_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|long
|

a| [[quarkus-cache_quarkus-cache-caffeine-expire-after-write]] [.property-path]##link:#quarkus-cache_quarkus-cache-caffeine-expire-after-write[`+++quarkus.cache.caffeine.expire-after-write+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.cache.caffeine.expire-after-write+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specifies that each entry should be automatically removed from the cache once a fixed duration has elapsed after the entry's creation, or the most recent replacement of its value.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE_EXPIRE_AFTER_WRITE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE_EXPIRE_AFTER_WRITE+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-cache_quarkus-cache[icon:question-circle[title=More information about the Duration format]]
|

a| [[quarkus-cache_quarkus-cache-caffeine-expire-after-access]] [.property-path]##link:#quarkus-cache_quarkus-cache-caffeine-expire-after-access[`+++quarkus.cache.caffeine.expire-after-access+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.cache.caffeine.expire-after-access+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specifies that each entry should be automatically removed from the cache once a fixed duration has elapsed after the entry's creation, the most recent replacement of its value, or its last read.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE_EXPIRE_AFTER_ACCESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE_EXPIRE_AFTER_ACCESS+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-cache_quarkus-cache[icon:question-circle[title=More information about the Duration format]]
|

a| [[quarkus-cache_quarkus-cache-caffeine-metrics-enabled]] [.property-path]##link:#quarkus-cache_quarkus-cache-caffeine-metrics-enabled[`+++quarkus.cache.caffeine.metrics-enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.cache.caffeine.metrics-enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether or not metrics are recorded if the application depends on the Micrometer extension. Setting this value to `true` will enable the accumulation of cache stats inside Caffeine.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-cache_quarkus-cache-caffeine-cache-name-initial-capacity]] [.property-path]##link:#quarkus-cache_quarkus-cache-caffeine-cache-name-initial-capacity[`+++quarkus.cache.caffeine."cache-name".initial-capacity+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.cache.caffeine."cache-name".initial-capacity+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Minimum total size for the internal data structures. Providing a large enough estimate at construction time avoids the need for expensive resizing operations later, but setting this value unnecessarily high wastes memory.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__INITIAL_CAPACITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__INITIAL_CAPACITY+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-cache_quarkus-cache-caffeine-cache-name-maximum-size]] [.property-path]##link:#quarkus-cache_quarkus-cache-caffeine-cache-name-maximum-size[`+++quarkus.cache.caffeine."cache-name".maximum-size+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.cache.caffeine."cache-name".maximum-size+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Maximum number of entries the cache may contain. Note that the cache *may evict an entry before this limit is exceeded or temporarily exceed the threshold while evicting*. As the cache size grows close to the maximum, the cache evicts entries that are less likely to be used again. For example, the cache may evict an entry because it hasn't been used recently or very often.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__MAXIMUM_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__MAXIMUM_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|long
|

a| [[quarkus-cache_quarkus-cache-caffeine-cache-name-expire-after-write]] [.property-path]##link:#quarkus-cache_quarkus-cache-caffeine-cache-name-expire-after-write[`+++quarkus.cache.caffeine."cache-name".expire-after-write+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.cache.caffeine."cache-name".expire-after-write+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specifies that each entry should be automatically removed from the cache once a fixed duration has elapsed after the entry's creation, or the most recent replacement of its value.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__EXPIRE_AFTER_WRITE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__EXPIRE_AFTER_WRITE+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-cache_quarkus-cache[icon:question-circle[title=More information about the Duration format]]
|

a| [[quarkus-cache_quarkus-cache-caffeine-cache-name-expire-after-access]] [.property-path]##link:#quarkus-cache_quarkus-cache-caffeine-cache-name-expire-after-access[`+++quarkus.cache.caffeine."cache-name".expire-after-access+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.cache.caffeine."cache-name".expire-after-access+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specifies that each entry should be automatically removed from the cache once a fixed duration has elapsed after the entry's creation, the most recent replacement of its value, or its last read.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__EXPIRE_AFTER_ACCESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__EXPIRE_AFTER_ACCESS+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-cache_quarkus-cache[icon:question-circle[title=More information about the Duration format]]
|

a| [[quarkus-cache_quarkus-cache-caffeine-cache-name-metrics-enabled]] [.property-path]##link:#quarkus-cache_quarkus-cache-caffeine-cache-name-metrics-enabled[`+++quarkus.cache.caffeine."cache-name".metrics-enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.cache.caffeine."cache-name".metrics-enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether or not metrics are recorded if the application depends on the Micrometer extension. Setting this value to `true` will enable the accumulation of cache stats inside Caffeine.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|


|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-cache_quarkus-cache]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
